# labParalelo

./: CMakeLists.txt  mainMPI.c  mainOpenMP.c  mainOpenMP_MPI.c  performance.sh  run.sh
